[gd_scene load_steps=2 format=3 uid="uid://krgajkm6wgc6"]

[ext_resource type="Script" path="res://scripts/Attack.gd" id="1_s8ldi"]

[node name="Attack" type="Area2D"]
collision_layer = 10
collision_mask = 5
script = ExtResource("1_s8ldi")

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
